assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@300&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: roboto condensed, sans-serif;
    font-weight: 300;
    color: #2f4f4f;
    background-color: #fafafa;
}

h1 h2 {
    font-family: roboto, sans-serif;
    font-weight: 300;
    color: #2f4f4f;
    text-transform: capitalize;
    letter-spacing: 3px;
}

h2 {
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
}

h3 {
    text-align: left;
    padding-top: 10px;
    padding-bottom: 10px;
    font-size: 110%;
}

p {
    font-family: roboto, sans-serif;
    padding: 10px;
    line-height: 30px;
}

img {
    max-width: 100%;
}

a {
    text-decoration: none;
    color: inherit;
}

/* menu styling */
#menu {
    text-align: center;
    font-size: 120%;
    letter-spacing: 3px;
}

/* menu clicked link */
.active {
    border-bottom: 1px solid #2f4f4f;
}

/* lists in menu */
#menu li {
    margin-bottom: 10px;
    list-style-type: none;
    list-style: none;
}

/* hero image */
#hero-image {
    background: url(../images/vitaminception-main.png) no-repeat center center;
    max-width: 100%;
    display: block;
    height: 200px;
}

/* hero image overlay text - not overlaid on mobile */
#hero-text {
    font-size: 120%;
    font-family: roboto condensed, sans-serif;
    text-align: center;
    height: 75px;
    width: 100%;
    background-color: rgba(226, 221, 221, 0.7);
    text-transform: capitalize;
    padding-top: 15px;
    padding-bottom: 15px;
}

/* CSS grid for index page main content area*/

.vitamin-wrapper {
    display: grid;
    grid-row-gap: 20px;
    grid-column-gap: 20px;
}

.vitamin-wrapper-1 {
    /*styling for vitamin begin section on index page */
    display: grid;
    grid-row-gap: 20px;
    grid-column-gap: 20px;
}

.vitamin-stats {
    background-color: #fffafa;
    border-radius: 5px;
    padding: 20px;
}

.vitamin-why {
    background-color: #fffafa;
    border-radius: 5px;
    padding: 20px;
}

.vitamin-what {
    background-color: #fffafa;
    border-radius: 5px;
    padding: 20px;
}

.vitamin-animals {
    background-color: #fffafa;
    border-radius: 5px;
    padding: 20px;
}

.vitamin-begin {
    background-color: #fffafa;
    border-radius: 5px;
    padding: 20px;
}

.vitamin-stats li {
    text-align: center;
    line-height: 30px;
    list-style-type: none;
}

.vitamin-box-container {
    width: 200px;
    height: 200px;
    padding: 3px;
    border-style: solid;
    border-color: #ccc;
    border-width: 1px;
    border-radius: 50%;
    margin: 0 auto;
}

/* circle images on the index page */
#vitamin-stats-cover-bg {
    background: url('../images/pexels-anastasia-tooming-11105320.jpg') no-repeat center center;
    width: auto;
    height: 100%;
    background-size: contain;
    border-radius: 50%;
}

#vitamin-why-cover-bg {
    background: url('../images/pexels-ian-turnell-709567.jpg') no-repeat center center;
    width: auto;
    height: 100%;
    background-size: contain;
    border-radius: 50%;
}

#vitamin-what-cover-bg {
    background: url('../images/pexels-digital-buggu-171198.jpg') no-repeat center center;
    width: auto;
    height: 100%;
    background-size: contain;
    border-radius: 50%;
}

#vitamin-animals-cover-bg {
    background: url('../images/pexels-oleksandr-pidvalnyi-321552.jpg') no-repeat center center;
    width: auto;
    height: 100%;
    background-size: contain;
    border-radius: 50%;
}

#vitamin-begin-cover-bg {
    background: url('../images/too-many-vitamins.jpg') no-repeat center center;
    width: auto;
    height: 100%;
    background-size: contain;
    border-radius: 50%;
}

.vitamin-begin li {
    text-align: center;
    line-height: 30px;
    text-align: center;
    font-size: 120%;
    letter-spacing: 3px;
    list-style-type: none;
}

/* VitaminC page */

/* vitamin C hero image styling  */
#vitaminc-hero-image {
    background: url(../images/pexels-lukas-1414134.jpg) no-repeat center center;
    max-width: 100%;
    display: block;
    height: 200px;
}

/* vitaminc c main contet styling */
.vitaminc-wrapper {
    display: grid;
    grid-row-gap: 20px;
    grid-column-gap: 20px;
}

.vitaminc-descr {
    display: grid;
    grid-row-gap: 20px;
    grid-column-gap: 20px;
    background-color: #fffafa;
}

.vitaminc-sources {
    display: grid;
    grid-row-gap: 20px;
    grid-column-gap: 20px;
    background-color: #fffafa;
}

.vitaminc-info {
    display: grid;
    grid-row-gap: 20px;
    grid-column-gap: 20px;
    background-color: #fffafa;
}

.vitaminc-shop {
    display: grid;
    grid-row-gap: 20px;
    grid-column-gap: 20px;
    background-color: #fffafa;
}

/* circle images on the vitamin c page */

#vitaminc-descr-cover-bg {
    background: url('../images/pexels-photomix-company-96620.jpg') no-repeat center center;
    width: auto;
    height: 100%;
    background-size: contain;
    border-radius: 50%;
}

.vitaminc-wrapper a {
    text-align: center;
    font-style: italic;
    font-size: small;
}

/* VitaminD page */

/* vitamin D hero image styling  */
#vitamind-hero-image {
    background: url(../images/pexels-garon-piceli-852793.jpg) no-repeat center center;
    max-width: 100%;
    display: block;
    height: 200px;
}

/* vitaminc c main contet styling */
.vitamind-wrapper {
    display: grid;
    grid-row-gap: 20px;
    grid-column-gap: 20px;
}

.vitamind-descr {
    display: grid;
    grid-row-gap: 20px;
    grid-column-gap: 20px;
    background-color: #fffafa;
}

.vitamind-sources {
    display: grid;
    grid-row-gap: 20px;
    grid-column-gap: 20px;
    background-color: #fffafa;
}

.vitamind-info {
    display: grid;
    grid-row-gap: 20px;
    grid-column-gap: 20px;
    background-color: #fffafa;
}

.vitamind-shop {
    display: grid;
    grid-row-gap: 20px;
    grid-column-gap: 20px;
    background-color: #fffafa;
}

#vitamind-descr-container {
    width: 200px;
    height: 200px;
    padding: 3px;
    border-style: solid;
    border-color: #ccc;
    border-width: 1px;
    border-radius: 50%;
    margin: 0 auto;
}

/* circle images on the vitamin d page */
#vitamind-descr-cover-bg {
    background: url('../images/pexels-anna-tarazevich-5935416.jpg') no-repeat center center;
    width: auto;
    height: 100%;
    background-size: contain;
    border-radius: 50%;
}

.vitamind-wrapper a {
    text-align: center;
    font-style: italic;
    font-size: small;
}

.vitamind-sources>a {
    text-align: center;
    font-style: italic;
    font-size: small;
}

#vitamind-sources-graphic {
    border-radius: 8px;
    border: 1px solid #ddd;
    padding: 5px;
    width: 80%;
    max-width: 564px;
    height: auto;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.vitamind-info img {
    height: 200px;
}

.vitamind-shop img {
    max-height: 200px;
}

.column {
    float: left;
    width: 33.33%;
    padding: 15px;
    box-sizing: border-box;
}

/* footer styling */
footer {
    clear: both;
    height: 150px;
    text-align: center;
}

/* Solid border */
hr.solid {
    padding-top: 20px;
    border-top: 3px solid #bbb;
}

#signup h3 {
    text-align: center;
    font-size: 200%;
    padding: 20px;
}

#signup input {
    width: 40%;
    border: 2px solid #bbb;
    box-sizing: border-box;
}

#social-networks {
    text-align: center;
    font-size: 150%;
    padding: 20px;
}

#social-networks li {
    list-style-type: none;
    list-style: none;
}

#social-networks li>a {
    text-decoration: none;
    color: inherit;
}

.social-networks i {
    font-size: 160%;
    margin: 1%;
    padding: 5px;
    color: #3a3a3a;
}

/* tablet view styling */

@media screen and (min-width: 600px) {

    /* tablet logo and menu links */
    #menu,
    #logo {
        line-height: 150px;
    }

    #logo {
        float: left;
        width: 150px;
        height: 150px;
    }

    #menu li {
        float: right;
        list-style-type: none;
        list-style: none;
        margin-right: 20px;
    }

    /* tablet hero image and cover text */
    #hero-image {
        height: 300px;
        width: 100%;
        overflow: hidden;
    }

    #hero-text {
        border-radius: 8px;
        border: 1px solid #ddd;
        font-size: 150%;
        font-family: roboto condensed, sans-serif;
        height: 100px;
        width: 400px;
        background-color: rgba(236, 236, 236, 0.5);
        text-transform: capitalize;
        padding-top: 20px;
        padding-bottom: 10px;
        bottom: 55%;
        right: 20%;
        position: absolute;
    }

    #menu li {
        float: left;
        margin-left: 50px;
    }

    #vitaminc-hero-image {
        height: 300px;
        width: 100%;
        overflow: hidden;
    }

    #vitamind-hero-image {
        height: 300px;
        width: 100%;
        overflow: hidden;
    }

    #signup input {
        width: 20%;
        border: 2px solid #bbb;
        box-sizing: border-box;
    }
}

/* desktop view styling */
@media screen and (min-width: 1000px) {

    /* desktop logo and menu links */
    #menu,
    #logo {
        line-height: 300px;
    }

    #logo {
        float: left;
        width: 300px;
        height: 300px;
    }

    #menu a:hover {
        border-bottom: 1px solid #2f4f4f;
    }

    #menu li {
        list-style-type: none;
        list-style: none;
        float: left;
        margin-right: 50px;
    }

    /* desktop hero image and cover text */
    #hero-image {
        height: 600px;
        width: 100%;
        overflow: hidden;
    }

    #hero-text {
        border-radius: 8px;
        border: 1px solid #ddd;
        font-size: 150%;
        font-family: roboto condensed, sans-serif;
        height: 100px;
        width: 400px;
        background-color: rgba(236, 236, 236, 0.5);
        text-transform: capitalize;
        padding-top: 20px;
        padding-bottom: 10px;
        bottom: 25%;
        right: 40%;
        position: absolute;
    }

    /* index page main content desktop view */
    .vitamin-wrapper {
        display: grid;
        grid-template-columns: 500px 500px;
        grid-row: auto auto;
        grid-column-gap: 20px;
        grid-row-gap: 20px;
        justify-content: center;
    }

    .vitamin-wrapper-1 {
        display: grid;
        grid-template-columns: 1000px;
        grid-row: auto auto;
        grid-column-gap: 20px;
        grid-row-gap: 20px;
        justify-content: center;
    }

    /* vitaminc page desktop view */
    #vitaminc-hero-image {
        height: 600px;
        width: 100%;
        overflow: hidden;
    }

    .vitaminc-wrapper {
        display: grid;
        grid-template-columns: 1000px;
        grid-row: auto auto;
        grid-column-gap: 20px;
        grid-row-gap: 20px;
        justify-content: center;
    }

    /* vitamind page desktop view */
    .vitamind-wrapper {
        display: grid;
        grid-template-columns: 1000px;
        grid-row: auto auto;
        grid-column-gap: 20px;
        grid-row-gap: 20px;
        justify-content: center;
    }

    #vitamind-hero-image {
        height: 600px;
        width: 100%;
        overflow: hidden;
    }

}

